welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:3: error: value update is not a member of java.awt.Color
}while (getGroundColor() = Color.yellow) 
        ^